# Mini-CRT

./: CMakeLists.txt  README.md  entry.c  format.c  malloc.c  minicrt.h  stdio.c  string.c
src/: CMakeLists.txt  entry.c  malloc.c  minicrt.h  printf.c  stdio.c  test.c
